# TCC-24

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  dockerfile  index.py  main.py  pyproject.toml  render.yaml  requirements.txt
src/: Dockerfile  Dockerfile.flask  Dockerfile.streamlit  Home.py  __main__.py  api.py  dockerfile  pyproject.toml  requirements.txt  start.sh
src/lib/: http.py  redis.py
src/pages/: 1_Seu_IMC.py  2_Login.py  3_Playlist_para_treinar.py  4_Planilha.py  Dicas_Saudaveis.py
src/pages/audio/: movimente-se funk  movimente-se swing
