[tool.poetry]
name = "tcc apresentação de dados"
version = "0.1.0"
description = "O sistema irá mostrar os dados tratados, relacionados a atividade fisica"
authors = ["Ketlyn Athan <ketlynathan99@outlok.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
