[tool.poetry]
name = "tcc"
version = "0.1.0"
description = "Exibir dados"
authors = ["Ketlyn Athan <ketlynathan99@outlok.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
