[tool.poetry]
name = "tcc"
version = "0.1.0"
description = "ETL"
authors = ["Ketlyn Athan <ketlynathan99@outlok.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
