[project]
name = "tcc"
version = "0.1.0"
description = "Analise de dados"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3.2",
    "duckdb>=1.1.3",
    "httpx>=0.27.2",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.3",
    "ruff>=0.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.39.0",
    "upstash-redis>=1.2.0",
    "xlsxwriter>=3.2.0",
]
